--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title >Tic Tac Toe Game</title>
 </head>
@@ -12,12 +13,18 @@
        <h1 id="land" > Tic Tac Toe Game </h1> 
     </header>
     <br/>
-    <div class="home-img"><a href="game.html" value="Tic Tac Toe Game"><img src="img/homePic.png" /></a></div>
-    <br/>
-    <br/>
-    <a href="game.html" value="Tic Tac Toe New Game"> <button class="btn-new" ><i class="ion-ios-plus-outline"></i>New game</button></a>
-    <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
-</body>
+    <div class="home-img">
+        <!-- <a href="game.html" value="Tic Tac Toe Game"> -->
+         <input class="buttonImg" type="image" src="img/homePic.png" />
+        <!-- </a> -->
+    </div>
+    <footer>
+            <a href="game.html" value="Tic Tac Toe New Game"> 
+                <button class="btn-new"> New game </button>
+            </a>
+     </footer>
+
+     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script src="main.js"></script>
