--- a/game.html
+++ b/game.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <title>Tic Tac Toe Game</title>
-  </head>
-  <body class="game-background">
+</head>
+<body class="game-background">
     <header>
-      <h3 id="title-game">Tic Tac Toe Game</h3>
-      <div id="xoimg">
-        <img src="img/x_icon.png" alt="X" />
-        <img src="img/o_icon.png" alt="O" />
-      </div>
+    <h3 id="title-game" > Tic Tac Toe Game </h3> 
+        <div id="xoimg">
+            <img src="img/x_icon.png" alt="X" />
+            <img src="img/o_icon.png" alt="O" />
+        </div>
     </header>
-    <div class="game">
-      <br />
-      <div class="ticTac" id="1"></div>
-      <div class="ticTac" id="2"></div>
-      <div class="ticTac" id="3"></div>
-      <div class="ticTac" id="4"></div>
-      <div class="ticTac" id="5"></div>
-      <div class="ticTac" id="6"></div>
-      <div class="ticTac" id="7"></div>
-      <div class="ticTac" id="8"></div>
-      <div class="ticTac" id="9"></div>
-    </div>
-    <div class="clearfix"></div>
-    <br />
-    <footer>
-      <button id="playAgain" onclick="reset()">Play Again</button>
-    </footer>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="main.js"></script>
-  </body>
+<div class="game" >
+    <br/>
+    <div class="ticTac" id="1" ></div>
+    <div class="ticTac" id="2" ></div>
+    <div class="ticTac" id="3" ></div>
+    <div class="ticTac" id="4" ></div>
+    <div class="ticTac" id="5" ></div>
+    <div class="ticTac" id="6" ></div>
+    <div class="ticTac" id="7" ></div>
+    <div class="ticTac" id="8" ></div>
+    <div class="ticTac" id="9" ></div>
+</div>
+<div class="clearfix"></div>
+<br/>
+<footer>
+        <button id="playAgain" onclick="reset()">Play Again</button>
+</footer>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="main.js"></script>
+</body>
 </html>
